--- a/src/pages/demo/form/form.scss
+++ b/src/pages/demo/form/form.scss
@@ -1,3 +1,20 @@
-page-form {
-
+demo-form {
+  $danger-color: #f53d3d;
+  .invalid-tip {
+    padding: 1px 16px;
+    color: $danger-color;
+    line-height: 18px;
+    > div:before {
+      content: '!';
+      display: inline-block;
+      text-align: center;
+      font-size: 14px;
+      color: #fff;
+      width: 17px;
+      height: 16px;
+      background: $danger-color;
+      border-radius: 50%;
+      margin-right: 2px;
+    }
+  }
 }
